--- a/src/sass/structure/widgets/_misc.scss
+++ b/src/sass/structure/widgets/_misc.scss
@@ -25,20 +25,24 @@
 		display: table-row;
 		
 		a {
-			text-decoration: none;
+                    padding: 0;
+                    text-decoration: none;
 		}
 		
-		a:hover, a:focus {
+		a:hover, 
+                a:focus {
 			text-decoration: underline;
 		}
 	}
 	li:before {
-	    @extend .fa;
-	    @extend .fa-angle-right;	
-	    font-weight: bold;
-	    color: var(--color-links);
-	    width: 1rem;
-	    display: table-cell;
+            
+             @include svg-icon-place();
+             background-image: svg-angle-right($color-content-links);
+                
+                display: table-cell;
+                vertical-align: middle;
+                color: var(--color-Default);
+            
 	}
 	
 }
