--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -5247,7 +5247,7 @@ p.presentationtitle {
 /*-----------------------------------------------------------------------------------*/
 a {
   color: var(--color-links);
-  text-decoration: none;
+  text-decoration: underline;
 }
 a:active, a:hover, a:focus {
   text-decoration: underline;
@@ -5304,10 +5304,13 @@ a.tag-cloud-link:hover, a.tag-cloud-link:focus, #hero a:hover, #hero a:focus {
   text-align: right;
 }
 .continue .read-more-link {
-  box-shadow: initial;
+  box-shadow: none;
   transition: initial;
-  padding: initial;
+  padding: 0;
   text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
   display: inline-block;
   border-radius: 3px;
   background-clip: padding-box;
@@ -5323,9 +5326,11 @@ a.tag-cloud-link:hover, a.tag-cloud-link:focus, #hero a:hover, #hero a:focus {
   color: var(--color-Text);
 }
 .continue .read-more-link:hover, .continue .read-more-link:focus {
-  color: initial;
-  box-shadow: initial;
+  box-shadow: none;
   text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
 }
 .continue .read-more-link:hover, .continue .read-more-link:focus {
   color: var(--color-button-hover-text);
@@ -5392,10 +5397,13 @@ main a img,
 .content-inline a.news-image,
 .content-inline a svg,
 .content-inline a img {
-  box-shadow: initial;
+  box-shadow: none;
   transition: initial;
-  padding: initial;
+  padding: 0;
   text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
 }
 main a.news-image:hover, main a.news-image:focus,
 main a svg:hover,
@@ -5420,9 +5428,11 @@ main a img:focus,
 .content-inline a svg:focus,
 .content-inline a img:hover,
 .content-inline a img:focus {
-  color: initial;
-  box-shadow: initial;
+  box-shadow: none;
   text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
 }
 main .widget a,
 main aside a,
@@ -5455,10 +5465,13 @@ main h1 a, main h2 a, main h3 a, main h4 a, main h5 a, main h6 a,
 .content-inline h4 a,
 .content-inline h5 a,
 .content-inline h6 a {
-  box-shadow: initial;
+  box-shadow: none;
   transition: initial;
-  padding: initial;
+  padding: 0;
   text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
   text-decoration: none;
 }
 main .widget a:hover, main .widget a:focus,
@@ -5522,9 +5535,11 @@ main h1 a:focus, main h2 a:hover, main h2 a:focus, main h3 a:hover, main h3 a:fo
 .content-inline h5 a:focus,
 .content-inline h6 a:hover,
 .content-inline h6 a:focus {
-  color: initial;
-  box-shadow: initial;
+  box-shadow: none;
   text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
 }
 main .widget a:active, main .widget a:hover, main .widget a:focus,
 main aside a:active,
@@ -5623,10 +5638,13 @@ main a.media-img,
 .entry-content a.media-img,
 .portalpage-content a.media-img,
 .content-inline a.media-img {
-  box-shadow: initial;
+  box-shadow: none;
   transition: initial;
-  padding: initial;
+  padding: 0;
   text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
   display: inline-block;
   overflow: hidden;
 }
@@ -5637,9 +5655,11 @@ main a.media-img:hover, main a.media-img:focus,
 .portalpage-content a.media-img:focus,
 .content-inline a.media-img:hover,
 .content-inline a.media-img:focus {
-  color: initial;
-  box-shadow: initial;
+  box-shadow: none;
   text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
 }
 main a.media-img img,
 .entry-content a.media-img img,
@@ -5986,10 +6006,13 @@ ol li ul li {
   display: inline-block;
 }
 .pagination.pagebreaks .subpages a {
-  box-shadow: initial;
+  box-shadow: none;
   transition: initial;
-  padding: initial;
+  padding: 0;
   text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
   text-decoration: none;
   color: var(--color-button-text);
   background: var(--color-button-bg);
@@ -5997,9 +6020,11 @@ ol li ul li {
   line-height: 1.313rem;
 }
 .pagination.pagebreaks .subpages a:hover, .pagination.pagebreaks .subpages a:focus {
-  color: initial;
-  box-shadow: initial;
+  box-shadow: none;
   text-decoration: underline;
+  color: currentcolor;
+  -webkit-text-decoration-color: currentcolor;
+          text-decoration-color: currentcolor;
 }
 .pagination.pagebreaks .subpages a:hover, .pagination.pagebreaks .subpages a:focus {
   color: var(--color-button-hover-text);
