--- a/src/sass/elements/_links.scss
+++ b/src/sass/elements/_links.scss
@@ -4,9 +4,9 @@
 
 a {
 	color: var(--color-links);
-	text-decoration: underline;
+	text-decoration: none;
         
-        &:link,
+      
 	&:active,
 	&:hover, 
 	&:focus {
