--- a/src/sass/frameworks/_bootstrap.scss
+++ b/src/sass/frameworks/_bootstrap.scss
@@ -12,7 +12,7 @@
  @import "bootstrap/type";
  @import "bootstrap/code";
 @import "bootstrap/grid";
-@import "bootstrap/buttons";
+// @import "bootstrap/buttons";
 
 // Components
 @import "bootstrap/alerts";
