--- a/src/sass/structure/footer/_pagefooter.scss
+++ b/src/sass/structure/footer/_pagefooter.scss
@@ -44,21 +44,22 @@
 	    }
 	    &.fau {
 		overflow: hidden;
+                margin-top: 0.5rem;
 	    }
 	}
 	.footer-address {
-	    padding-top: 20px;
+	    padding-top: 1rem;
 	    @media (min-width: $screen-xs) {
-		padding-top: inherit;
+		padding-top: 0;
 	    }
 	}
 
 	.footer-meta {
 	   text-align: left;
-	   margin-top: 10px;
+	   margin-top: 0.7rem;
 	   @media (min-width: $screen-sm) {
 	       text-align: right;
-	       margin-top: inherit;
+               margin-top: 0;
 	   }
 	   
 	   .svg-socialmedia {
