--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -5060,11 +5060,14 @@ main a,
           text-decoration-color: var(--color-primary-ci-hell);
   padding: 1px;
 }
-main a:focus, main a:hover,
+main a:active, main a:focus, main a:hover,
+.entry-content a:active,
 .entry-content a:focus,
 .entry-content a:hover,
+.portalpage-content a:active,
 .portalpage-content a:focus,
 .portalpage-content a:hover,
+.content-inline a:active,
 .content-inline a:focus,
 .content-inline a:hover {
   text-decoration: underline;
@@ -7532,6 +7535,26 @@ input[type=button]:hover,
 input[type=button]:focus,
 [role=button]:hover,
 [role=button]:focus {
+  text-decoration: none;
+}
+
+a.btn, a[role=button] {
+  display: inline-block;
+  border-radius: 3px;
+  background-clip: padding-box;
+  font-size: 0.937rem;
+  line-height: 1.407rem;
+  color: var(--color-button-text);
+  background: var(--color-button-bg);
+  border: none;
+  padding: 0.5rem 0.7rem;
+  text-decoration: none;
+}
+a.btn:hover, a.btn:focus, a[role=button]:hover, a[role=button]:focus {
+  color: var(--color-button-hover-text);
+  background: var(--color-button-hover-bg);
+}
+a.btn:hover, a.btn:focus, a[role=button]:hover, a[role=button]:focus {
   text-decoration: none;
 }
 
