--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -5055,9 +5055,10 @@ main a,
   color: var(--color-content-links);
   box-shadow: inset 0 -0.1rem 0 0 var(--color-primary-ci-hell);
   transition: all 0.3s ease-out;
-  text-decoration: none;
+  text-decoration: underline;
   -webkit-text-decoration-color: var(--color-primary-ci-hell);
           text-decoration-color: var(--color-primary-ci-hell);
+  text-underline-offset: 3px;
   padding: 1px;
 }
 main a:active, main a:focus, main a:hover,
@@ -5125,10 +5126,12 @@ main a img:focus,
   -webkit-text-decoration-color: currentcolor;
           text-decoration-color: currentcolor;
 }
+main .person-info a,
 main .widget a,
 main aside a,
 main .subpages-menu a,
 main h1 a, main h2 a, main h3 a, main h4 a, main h5 a, main h6 a,
+.entry-content .person-info a,
 .entry-content .widget a,
 .entry-content aside a,
 .entry-content .subpages-menu a,
@@ -5138,6 +5141,7 @@ main h1 a, main h2 a, main h3 a, main h4 a, main h5 a, main h6 a,
 .entry-content h4 a,
 .entry-content h5 a,
 .entry-content h6 a,
+.portalpage-content .person-info a,
 .portalpage-content .widget a,
 .portalpage-content aside a,
 .portalpage-content .subpages-menu a,
@@ -5147,6 +5151,7 @@ main h1 a, main h2 a, main h3 a, main h4 a, main h5 a, main h6 a,
 .portalpage-content h4 a,
 .portalpage-content h5 a,
 .portalpage-content h6 a,
+.content-inline .person-info a,
 .content-inline .widget a,
 .content-inline aside a,
 .content-inline .subpages-menu a,
@@ -5165,13 +5170,17 @@ main h1 a, main h2 a, main h3 a, main h4 a, main h5 a, main h6 a,
           text-decoration-color: currentcolor;
   text-decoration: none;
 }
-main .widget a:hover, main .widget a:focus,
+main .person-info a:hover, main .person-info a:focus,
+main .widget a:hover,
+main .widget a:focus,
 main aside a:hover,
 main aside a:focus,
 main .subpages-menu a:hover,
 main .subpages-menu a:focus,
 main h1 a:hover,
 main h1 a:focus, main h2 a:hover, main h2 a:focus, main h3 a:hover, main h3 a:focus, main h4 a:hover, main h4 a:focus, main h5 a:hover, main h5 a:focus, main h6 a:hover, main h6 a:focus,
+.entry-content .person-info a:hover,
+.entry-content .person-info a:focus,
 .entry-content .widget a:hover,
 .entry-content .widget a:focus,
 .entry-content aside a:hover,
@@ -5190,6 +5199,8 @@ main h1 a:focus, main h2 a:hover, main h2 a:focus, main h3 a:hover, main h3 a:fo
 .entry-content h5 a:focus,
 .entry-content h6 a:hover,
 .entry-content h6 a:focus,
+.portalpage-content .person-info a:hover,
+.portalpage-content .person-info a:focus,
 .portalpage-content .widget a:hover,
 .portalpage-content .widget a:focus,
 .portalpage-content aside a:hover,
@@ -5208,6 +5219,8 @@ main h1 a:focus, main h2 a:hover, main h2 a:focus, main h3 a:hover, main h3 a:fo
 .portalpage-content h5 a:focus,
 .portalpage-content h6 a:hover,
 .portalpage-content h6 a:focus,
+.content-inline .person-info a:hover,
+.content-inline .person-info a:focus,
 .content-inline .widget a:hover,
 .content-inline .widget a:focus,
 .content-inline aside a:hover,
@@ -5232,7 +5245,10 @@ main h1 a:focus, main h2 a:hover, main h2 a:focus, main h3 a:hover, main h3 a:fo
   -webkit-text-decoration-color: currentcolor;
           text-decoration-color: currentcolor;
 }
-main .widget a:active, main .widget a:hover, main .widget a:focus,
+main .person-info a:active, main .person-info a:hover, main .person-info a:focus,
+main .widget a:active,
+main .widget a:hover,
+main .widget a:focus,
 main aside a:active,
 main aside a:hover,
 main aside a:focus,
@@ -5242,6 +5258,9 @@ main .subpages-menu a:focus,
 main h1 a:active,
 main h1 a:hover,
 main h1 a:focus, main h2 a:active, main h2 a:hover, main h2 a:focus, main h3 a:active, main h3 a:hover, main h3 a:focus, main h4 a:active, main h4 a:hover, main h4 a:focus, main h5 a:active, main h5 a:hover, main h5 a:focus, main h6 a:active, main h6 a:hover, main h6 a:focus,
+.entry-content .person-info a:active,
+.entry-content .person-info a:hover,
+.entry-content .person-info a:focus,
 .entry-content .widget a:active,
 .entry-content .widget a:hover,
 .entry-content .widget a:focus,
@@ -5269,6 +5288,9 @@ main h1 a:focus, main h2 a:active, main h2 a:hover, main h2 a:focus, main h3 a:a
 .entry-content h6 a:active,
 .entry-content h6 a:hover,
 .entry-content h6 a:focus,
+.portalpage-content .person-info a:active,
+.portalpage-content .person-info a:hover,
+.portalpage-content .person-info a:focus,
 .portalpage-content .widget a:active,
 .portalpage-content .widget a:hover,
 .portalpage-content .widget a:focus,
@@ -5296,6 +5318,9 @@ main h1 a:focus, main h2 a:active, main h2 a:hover, main h2 a:focus, main h3 a:a
 .portalpage-content h6 a:active,
 .portalpage-content h6 a:hover,
 .portalpage-content h6 a:focus,
+.content-inline .person-info a:active,
+.content-inline .person-info a:hover,
+.content-inline .person-info a:focus,
 .content-inline .widget a:active,
 .content-inline .widget a:hover,
 .content-inline .widget a:focus,
