--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -200,8 +200,9 @@ Mixins File for Wordpress Theme FAU
     color: var(--color-content-links);
     box-shadow: inset 0 -0.1rem 0 0 var(--color-primary-ci-hell);
     transition: all .3s ease-out; //box-shadow 0.3s ease-in-out;
-    text-decoration: none;
+    text-decoration: underline;
     text-decoration-color:  var(--color-primary-ci-hell);
+    text-underline-offset: 3px;
     padding: 1px;
 
     &:active,
