--- a/src/sass/structure/navigation/_clonednav.scss
+++ b/src/sass/structure/navigation/_clonednav.scss
@@ -62,32 +62,32 @@
 			}
 
 			&.zuv {
-				border-color: var(--color-zentral-basis);
+				border-color: var(--color-zentral-ci-hell);
 			}
 
 			&.phil,
 			&.philfak {
-				border-color: var(--color-phil-basis);
+				border-color: var(--color-phil-ci-hell);
 			}
 
 			&.rw,
 			&.rwfak {
-				border-color: var(--color-rw-basis);
+				border-color: var(--color-rw-ci-hell);
 			}
 
 			&.med,
 			&.medfak {
-				border-color: var(--color-med-basis);
+				border-color: var(--color-med-ci-hell);
 			}
 
 			&.nat,
 			&.natfak {
-				border-color: var(--color-nat-basis);
+				border-color: var(--color-nat-ci-hell);
 			}
 
 			&.tf,
 			&.techfak {
-				border-color:  var(--color-tf-basis);
+				border-color:  var(--color-tf-ci-hell);
 			}
 
 			&.white {
