--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -6409,7 +6409,8 @@ main img {
   }
 }
 main img.shadow {
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
+  filter: drop-shadow(2px 2px 7px rgba(0, 0, 0, 0.5));
+  box-shadow: none;
 }
 main img.thickborder {
   border: 1px solid black;
