--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -388,5 +388,7 @@ $subnav-width-md: 275px;
 $subnav-width-lg: 290px;
 
 $sidebar-width-inline: 235px;
+$sidebar-width-inline-lg: 270px;
 $sidebar-width-portal: 33%;
 $sidebar-width-posts: 330px;
+$sidebar-maxwidth-portal: 350px;
