--- a/src/sass/structure/content/_imagelink.scss
+++ b/src/sass/structure/content/_imagelink.scss
@@ -202,7 +202,7 @@
 
 	
 	.slick-dots {
-	    position: absolute;
+	//    position: absolute;
 	    display: block;
 	    width: 100%;
 	    padding: 0;
