--- a/src/sass/structure/content/_gallery.scss
+++ b/src/sass/structure/content/_gallery.scss
@@ -1,6 +1,7 @@
 /*-----------------------------------------------------------------------------------*/
 /* Gallery in content 
 /*-----------------------------------------------------------------------------------*/
+@use "sass:math";
 
 
 .image-gallery {
@@ -24,79 +25,32 @@
     figure:not(.with-caption) {
 	img {  
 	    object-fit: cover;
-	    
-		    min-height: 100%;
-		    min-width: 100%;
-		    width: 100%;
-		    height: auto;
-		    max-width: none;
-		    max-height: none;
+	    min-height: 100%;
+	    min-width: 100%;
+	    width: 100%;
+	    height: auto;
+	    max-width: none;
+	    max-height: none;
 
-	    
 	}
 
     }
     
     
     .grid {
-	.two, 
-	.three,
-	.four, 
-	.five {
-	    .row {
-		display: flex;
-		flex-wrap: wrap;
-		margin-left: 0;
-		margin-right: 0;
-	    }
-	    figure {
-		padding: 5px;
-	
-	    }
-	}
-	.two {	    
-	    figure {
-		width: calc(50% - 1px);
-		
-	    }
-	}
-	.three {
-	    figure {
-		width: calc(33% - 1px);
-	    }
-	}
-	.four {
-	    figure {
-		@extend .col-xs-6;
-		@media (min-width: $screen-sm-min) {
-		    width: calc(25% - 1px);
-		    // Rundungsfehler auschliessen: 
-		    // Hintergurnd: 666 / 4 = 166,5; würde auf 167 aufgerundet werden 
-		    // und dann leider dazu führen, dass der grid doch umbricht.
-		}
-	    }
-	}
-	.five {
-	    figure {
-		@extend .col-xs-6;
-		@media (min-width: $screen-sm-min) {
-		    width: calc(20% - 1px);
-		}
-	    }
-	}
+
 	.flexgrid {
 	    display: flex; 
 	    flex-wrap: wrap; 
-	    
+	    gap: floor(math.div($grid-gutter-width, 2));
 	    
 	    figure { 
 		border: 1px solid #e9edf2;
 		text-align: center;
 		height: auto;
-		margin: 5px;
 		overflow: hidden;
-		flex: 1 1 190px;
-		
+		width: 30%;
+		margin: 0;
 	
 	    }
 	    figure:not(.with-caption) { 
@@ -122,7 +76,46 @@
 	    }
 
 	    
+	    
+	    &.two, 
+	    &.three,
+	    &.four, 
+	    &.five {
+		figure {
+		    padding: 5px;
+
+		}
+	    }
+	    &.two {	    
+		figure {
+		    width: calc(50% - 10px);
+
+		}
+	    }
+	    &.three {
+		figure {
+		    width: calc(33% - 10px);
+		}
+	    }
+	    &.four {
+		figure {
+		   width: calc(50% - 10px);
+		    @media (min-width: $screen-sm) {
+			width: calc(25% - 10px);
+		    }
+		}
+	    }
+	    &.five {
+		figure {
+		    width: calc(50% - 10px);
+		    @media (min-width: $screen-sm) {
+			width: calc(20% - 10px);
+		    }
+		}
+	    }
+	    
 	}
+	
 	
 	
     }
@@ -370,7 +363,7 @@
 	}
     }
     &.nospace .grid {
-	.flexgrid, .one, .two, .three, .four, .five {
+	.flexgrid {
 	    figure {
 		padding: 0;
 		margin: 0;
